--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <canvas height="500" class="draw" id="canvas-particle"></canvas>
 </div>
-<script src="./js-particleslider.js"></script>
+<script src="js/particleslider.js"></script>
 <script>
     var ps = new ParticleSlider({
         mouseForce: 0
