--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <div id="particle-slider">
     <div class="slides">
-        <div class="slide" data-src="https://img.alicdn.com/tps/TB1QQzoIpXXXXb1XpXXXXXXXXXX.gif"></div>
+        <div class="slide" data-src="https://img.alicdn.com/tps/TB126YmIpXXXXcPXXXXXXXXXXXX.png"></div>
     </div>
     <canvas height="500" class="draw" id="canvas-particle"></canvas>
 </div>
